Fix bookmark spacing on bookmark-only pages

--- a/custom-config/radio/custom.css
+++ b/custom-config/radio/custom.css
@@ -19,6 +19,10 @@
  */
 
 #bookmarks {
+    margin-top: 0;
+}
+
+#services + #bookmarks {
     margin-top: -42px;
 }
 
